Fix link color on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -373,7 +373,6 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
     }
   }
 }
